src/objects/Application_Request__c.object
<CustomObject>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decline_Code_2__c</fullName>
        <label>Decline Code 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credit_Decline_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decline_Code_3__c</fullName>
        <label>Decline Code 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credit_Decline_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decline_Letter_Types__c</fullName>
        <label>Decline Letter Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0-Standard</fullName>
                </value>
                <value>
                    <fullName>1-Daily</fullName>
                </value>
                <value>
                    <fullName>2-Tri</fullName>
                </value>
                <value>
                    <fullName>3-Weekly</fullName>
                </value>
                <value>
                    <fullName>4-5th</fullName>
                </value>
                <value>
                    <fullName>5-Dep/Loc</fullName>
                </value>
                <value>
                    <fullName>6-Financials Requested</fullName>
                </value>
                <value>
                    <fullName>7-PG Requested</fullName>
                </value>
                <value>
                    <fullName>Declined Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Decline_code_1__c</fullName>
        <label>Decline Code 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credit_Decline_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>CorporatePay</description>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doing_Business_As__c</fullName>
        <formula>Opportunity__r.Doing_Business_As__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doing Business As?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_of_Project__c</fullName>
        <description>CorporatePay end date of Project</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date of Project</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Error_Log__c</fullName>
        <formula>Opportunity__r.Error_Log__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Error Log</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exempt_from_Motor_Fuels_Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exempt from Motor Fuels Tax?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Exposure_Check__c</fullName>
        <label>Existing Exposure Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Monthly_Vehicle_Expense__c</fullName>
        <label>Expected Monthly Vehicle Expense</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Experian_Data__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Experian Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Experian_Premier_Attribute_Codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Experian Premier Attribute Codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Experian_Premier_Attributes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Experian Premier Attributes</label>
        <length>9000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Referred_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the account of the referring contact</description>
        <label>External Referred by</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Application Requests (External Referred by)</relationshipLabel>
        <relationshipName>Application_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Referring_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures the referral information from the opportunity</description>
        <label>External Referring Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Requests (External Referring Contact)</relationshipLabel>
        <relationshipName>Application_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Sales_Id__c</fullName>
        <formula>Opportunity__r.External_Sales_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Sales Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year_Starts__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fiscal Year Starts</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_Contact_Email__c</fullName>
        <formula>Fleet_Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fleet Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_Contact_First_Name__c</fullName>
        <formula>Fleet_Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fleet Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_Contact_Last_Name__c</fullName>
        <formula>Fleet_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fleet Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Requests (Fleet Contact)</relationshipLabel>
        <relationshipName>Application_Requests3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fleet_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fleet Enrollment</label>
        <referenceTo>FleetEnrollment__c</referenceTo>
        <relationshipLabel>Application Requests</relationshipLabel>
        <relationshipName>Application_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fleet_Size__c</fullName>
        <formula>Opportunity__r.Fleet_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fleet Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forte_Check__c</fullName>
        <label>Forte Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Forte_Response_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Forte Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forte_Response_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Forte Response Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Forte_Response_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Forte Response Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forward_Application_to_Credit__c</fullName>
        <label>Forward Application to Credit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fraud_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fraud Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Application_Requests_Fraud_Analyst</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fraud_Decision_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fraud Decision Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fraud_Decision__c</fullName>
        <label>Fraud Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fraud_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fraud Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fraud_Recommendation__c</fullName>
        <label>Fraud Recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Recommend Approve</fullName>
                </value>
                <value>
                    <fullName>Recommend Review</fullName>
                </value>
                <value>
                    <fullName>Recommend Decline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GIACT_Customer_Response_Code_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Customer Response Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIACT_Customer_Response_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Customer Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIACT_Customer_Response_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Customer Response Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GIACT_Account_Response_Code_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Account Response Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIACT_Account_Response_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Account Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIACT_Account_Response_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Account Response Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GIACT_Check__c</fullName>
        <label>GIACT Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GIACT_Response_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Response Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIACT_Response_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Response Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GIACT_Verify_Response_Code_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GIACT Verify Response Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Ultimate_DUNS__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Global Ultimate DUNS</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Code__c</fullName>
        <formula>Opportunity__r.Group_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_DOB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guarantor DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Guarantor_SSN__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Guarantor SSN</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guarantor_Type__c</fullName>
        <label>Guarantor Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                    <default>true</default>
                    <label>Personal</label>
                </value>
                <value>
                    <fullName>Corporate</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_did_you_hear_about_this_offer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>How did you hear about this offer</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress_User__c</fullName>
        <description>Updated by workflow when a user checks the In Progress field.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Updated by workflow when a user checks the In Progress field.</inlineHelpText>
        <label>In Progress User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Progress</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inquiry_Address_High_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Fraud Indicator returned from Experian</inlineHelpText>
        <label>Inquiry Address High Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instant_Adjudication_Disabled__c</fullName>
        <formula>IF(TEXT(Opportunity__r.Campaign_Program__r.Program__r.URL_Generator_Group__c) == &apos;Sinclair&apos;, true, IF(Opportunity__r.Campaign_Program__r.Program__r.Disable_Instant_Decisioning__c == true, true, IF(Opportunity__r.Disable_Instant_Decisioning__c == true, true, false)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instant Adjudication Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instant_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Application was auto-approved by the system</description>
        <label>Instant Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration_Error_Message__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Integration Error Message</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Structure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Legal Structure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_BIID_Result__c</fullName>
        <label>Lexis Nexis BIID Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_Check__c</fullName>
        <label>Lexis Nexis BOCDD Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_BIID_Score__c</fullName>
        <label>Lexis Nexis BIID Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_CVI_Score__c</fullName>
        <label>Lexis Nexis CVI Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_Custom_Model_Score__c</fullName>
        <label>Lexis Nexis Custom Model Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_FraudPoint_Score__c</fullName>
        <label>Lexis Nexis FraudPoint Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_IID_Result__c</fullName>
        <label>Lexis Nexis IID Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lexis_Nexis_FraudPoint_Result__c</fullName>
        <label>Lexis Nexis FraudPoint Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Check__c</fullName>
        <label>Location Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merchant_Facility_Number__c</fullName>
        <formula>Opportunity__r.Merchant_Facility_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Merchant Facility Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes_to_Credit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Notes to Credit</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Existing_Accounts__c</fullName>
        <label>Number of Existing Accounts</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Existing_Applications__c</fullName>
        <label>Number of Existing Applications</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Payments_Negative__c</fullName>
        <label># of Payments Negative</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Payments_Slow__c</fullName>
        <label># of Payments Slow</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OFFIS_Application_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>OFFIS Application ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Offic_App_Error_Log__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Offic App Error Log</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>On_File_Address_High_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Fraud Indicator returned from Experian</inlineHelpText>
        <label>On File Address High Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name_Text__c</fullName>
        <formula>Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Name Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Opportunity #</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Application Requests</relationshipLabel>
        <relationshipName>Application_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>PG_Complete_c__c</fullName>
        <formula>IF( 
OR( 
ISBLANK(Personal_Guarantor_SSN__c), 
ISBLANK(Personal_Guarantor_First_Name__c), 
ISBLANK(Personal_Guarantor_Last_Name__c), 
ISBLANK(Personal_Guarantor_Mailing_Street__c), 
ISBLANK(Personal_Guarantor_Mailing_City__c), 
ISBLANK(Personal_Guarantor_Mailing_State__c), 
ISBLANK(Personal_Guarantor_Mailing_Zip__c), 
ISBLANK(TEXT(Personal_Guarantor_DOB__c)) 
), 
false, true 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PG Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PG_Data__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PG Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PG_FICO_Score__c</fullName>
        <label>PG FICO Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PG_High_Credit_Amount__c</fullName>
        <label>PG High Credit Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PG_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PG Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Paperless_Delivery__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Paperless Delivery</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Commission_Option__c</fullName>
        <formula>TEXT(Opportunity__r.Partner_Commission_Option__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Commission Option</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paydex__c</fullName>
        <label>Paydex</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantor_Annual_Income__c</fullName>
        <formula>Personal_Guarantor__r.Annual_Income__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Guarantor Annual Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantor_DOB__c</fullName>
        <formula>Personal_Guarantor__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Guarantor DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantor_Email__c</fullName>
        <formula>Personal_Guarantor__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Guarantor Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantor_First_Name__c</fullName>
        <formula>Personal_Guarantor__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Guarantor First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantor_Home_Phone__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(Personal_Guarantor__r.Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Guarantor Home Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantor_Last_Name__c</fullName>
        <formula>Personal_Guarantor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Guarantor Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantor_Mailing_City__c</fullName>
        <formula>Personal_Guarantor__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Guarantor Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantor_Mailing_Country__c</fullName>
        <formula>Personal_Guarantor__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Guarantor Mailing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantor_Mailing_State__c</fullName>
        <formula>Personal_Guarantor__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Guarantor Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantor_Mailing_Street__c</fullName>
        <formula>Personal_Guarantor__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Guarantor Mailing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantor_Mailing_Zip__c</fullName>
        <formula>Personal_Guarantor__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Guarantor Mailing Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantor_Middle_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Personal Guarantor Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantor_Mobile__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(Personal_Guarantor__r.MobilePhone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Guarantor Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantor_Phone__c</fullName>
        <formula>SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE( 
SUBSTITUTE(Personal_Guarantor__r.Phone, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Guarantor Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantor_Role__c</fullName>
        <label>Personal Guarantor Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>President/CEO</fullName>
                </value>
                <value>
                    <fullName>General Partner</fullName>
                </value>
                <value>
                    <fullName>VP</fullName>
                </value>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Guarantor_SSN__c</fullName>
        <formula>Personal_Guarantor__r.SSN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Personal Guarantor SSN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Personal_Guarantor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Personal Guarantor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Requests</relationshipLabel>
        <relationshipName>Application_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone_Number_Check__c</fullName>
        <label>Phone Number Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physical_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Physical City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Country__c</fullName>
        <label>Physical Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Physical_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Physical State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>